# libmacchiato

./: .gitmodules  CMakeLists.txt  README.md
Include/LibMacchiato/: Assembler.h  Assert.h  Cafe.h  CallbackData.h  ELF.h  Event.h  Export.h  ExportResource.h  Input.h  LibMacchiato.h  Log.h  Module.h  Patch.h  PluginExport.h  Version.h
Include/LibMacchiato/Assembler/: Error.h  Instruction.h  InstructionDef.h  InstructionDefTable.h  Mask.h  Mnemonic.h  Operand.h  OperandDef.h  PPCData.h  Register.h
Include/LibMacchiato/Cafe/: Define.h  GX2.h  VPAD.h
Include/LibMacchiato/Kernel/: Defs.h  README.md
Include/LibMacchiato/Patch/: AssemblyHook.h  Data.h  Detour.h  Error.h  Hook.h  Line.h  Trampoline.h
Include/LibMacchiato/Utils/: Assembly.h  Bind.h  Bounds.h  Debug.h  Filesystem.h  Kernel.h  Memory.h  OS.h  Time.h
Source/: Assembler.cpp  ELF.cpp  Kernel.s  Log.cpp
Source/Assembler/: Assembler.cpp  Mnemonic.cpp
Source/Utils/: Assembly.cpp  Filesystem.cpp  Kernel.cpp
